Enable hot module replacement in dev mode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<body>
-  <script async src="./src/index.tsx"></script>
-</body>
+  <body>
+    <div id="scheduler-widget" data-widget="scheduler-widget"></div>
+    <script async src="./src/index.tsx" data-mount-in="scheduler-widget"></script>
+  </body>
 </html>
