--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <div id="scheduler-widget" data-widget="scheduler-widget"></div>
+    <div id="container" data-widget="scheduler-widget"></div>
     <script async src="./src/index.tsx" data-mount-in="scheduler-widget"></script>
   </body>
 </html>
