Fix web3 detection for widget integration in other websites. - Add docker-compose.yml to run ganache-cli in development. - Document calendar service function. - Enable confirmation button customization via props.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <div id="container" data-widget="scheduler-widget"></div>
-    <script async src="./src/index.tsx" data-mount-in="scheduler-widget"></script>
+    <script defer src="./src/index.tsx" data-mount-in="scheduler-widget"></script>
   </body>
 </html>
